--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,4 +20,6 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+<div class="page__footer-copyright">
+  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+  Site last updated {{ "now" | date: '%d-%m-%Y' %}}
