--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,4 +22,6 @@
 
 <div class="page__footer-copyright">
   &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+  
   Site last updated {{ "now" | date: '%d-%m-%Y' %}}
+</div>
