--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,6 @@
 </div>
 
 <div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
-  
+  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}\n
   Site last updated {{ "now" | date: '%d-%m-%Y' %}}
-</div>
+
