--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,6 @@
 </div>
 
 <div class="page__footer-copyright">
-  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}\n
-  Site last updated {{ "now" | date: '%d-%m-%Y' %}}
+  <p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}</p>
+  <p>Site last updated {{ "now" | date: '%d-%m-%Y' %}}</p>
 
