--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,8 @@
 </div>
 
 <div class="page__footer-copyright">
-  <br>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}</br>
-  <br>Site last updated {{ "now" | date: '%d-%m-%Y' %}}</br>
+  <pre>
+  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+  Site last updated {{ "now" | date: '%d-%m-%Y' %}}
+  </pre>
 
