--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,7 @@
 </div>
 
 <div class="page__footer-copyright">
-  <pre>
-  &copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}
+  <p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}<br>
   Site last updated {{ "now" | date: '%d-%m-%Y' %}}
-  </pre>
+  </p>
 
